# NRF_5G

./: README.md  pyproject.toml
src/: __init__.py
src/Api/: __init__.py
src/Service/: nf_instance.py
src/api/: __init__.py
src/api/Database/: database.py
src/api/Service/: __init__.py  database.py  nf_instance.py
